fix domain activity trace
